# internet-roadtrip-pathfinder

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
src/: astar.rs  bench.rs  lib.rs  main.rs  model.rs  roadtrip.rs  roadtrip_api.rs
src/db/: mod.rs
src/db/migrate/: mod.rs  v0_to_v1.rs  v1_to_v2.rs  v2_to_v3.rs  v3_to_v4.rs  v4_to_v5.rs  v5_to_v6.rs
src/math/: angle.rs  mod.rs
src/streetview/: api.rs  mod.rs
src/web/: mod.rs  path.rs  ratelimit.rs
static/: index.html
userscript/: README.md  package.json  rollup.config.mjs  tsconfig.json
userscript/src/: api.ts  constants.ts  index.ts  math.ts  meta.js  mmt.ts  options.ts  pos.ts  settings.ts  stops-menu.ts  stops.ts  utils.ts
userscript/src/map/: index.ts  lines.ts  markers.ts
userscript/src/types/: irf.d.ts
