[package]
name = "internet-roadtrip-pathfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = "0.30.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
compact_str = { version = "0.9.0", features = ["serde"] }
eyre = "0.6.12"
parking_lot = "0.12.3"
reqwest = { version = "0.12.15", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "cookies",
    "json",
] }
tokio = { version = "1.45.0", features = ["full"] }
indexmap = "2.9.0"
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
simd-json = "0.15.1"
futures = "0.3.31"
rustc-hash = "2.1.1"
axum-extra = { version = "0.10.1", features = ["query"] }
tower-http = { version = "0.6.4", features = ["cors"] }
futures-util = "0.3.31"
base64 = "0.22.1"
byteorder = "1.5.0"
mimalloc = "0.1.46"
memmap2 = "0.9.5"
heed = { version = "0.22.0", default-features = false }
serde = "1.0.219"
coarsetime = "0.1.36"
quick_cache = { version = "0.6.14", default-features = false, features = [
    "parking_lot",
] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }

[profile.profiling]
inherits = "release"
debug = true

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[[bench]]
name = "my_benchmark"
harness = false
